# noise-suppression-mvp

./: .gitignore  README.md  pyproject.toml
configs/: colab_first_result.example.yaml  local_macbook_m3.example.yaml  smoke_demo.yaml  smoke_train.yaml
docs/: colab_launch_instructions.md  first_colab_run_plan.md  noise_suppression_dataset_stack.md  noise_suppression_mvp.md  noise_suppression_overview.md
notebooks/: first_colab_run.ipynb
scripts/: build_colab_bundle.py  prepare_first_colab_dataset.py  run_small_local_demo.sh  run_tiny_training_demo.sh
src/noise_suppression/: audio.py  baselines.py  cli.py  manifests.py  metrics.py  modeling.py  plans.py  training.py
tests/: test_metrics.py
